Fix for tooltip on IE8.

--- a/WebApplication/Content/Site.css
+++ b/WebApplication/Content/Site.css
@@ -139,3 +139,8 @@ body {
 .icon {
     padding-right: 2px;
 }
+
+/* Fix for tool tip on IE8.  The tooltip doesn't work if the content is a span */
+a[title] span {
+    display: inline-block;
+}
